# todo-app

./: .gitignore  AUTH_FIX_SUMMARY.txt  BUILD_ERROR_FIX_SUMMARY.txt  CLAUDE.md  COMPREHENSIVE_AUTH_FIXES.txt  COMPREHENSIVE_SAFETY_FIXES.txt  Constitution_Phase_IV.md  DASHBOARD_FIX_EXPLANATION.txt  FINAL_AUTH_FIXES.txt  FINAL_SOLUTION_EXPLANATION.txt  Phase_IV_RESUME_DEPLOYMENT.md  README.md  SAFETY_FIX_SUMMARY.txt  SAFE_FETCH_WRAPPER_FIX_SUMMARY.txt  deploy_phase5.sh  deploy_phase_iv.sh  package-lock.json  package.json  plan_phase_iv.md  pyproject.toml  redis-deployment.yaml  test_auth_flow.py  test_integration.py  todo_cli.py
.next/: trace  trace-build
Phase_IV/: COMPLETION_REPORT.md  ai_assisted_operations.md  comprehensive_documentation.md  deployment_process.md  execution_report.json  final_summary.md  implementation_summary.md
backend/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.consumer  consumers_runner.py  dapr_client.py  debug_auth.py  debug_task_creation.py  main.py  requirements.txt  run.py  todo_app.db  todo_chatbot.db  todo_chatbot_local.db
docs/: deployment-guide.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  middleware.ts  package-lock.json  package.json  tsconfig.json
helm/: Chart.yaml  values.yaml
k8s/: PHASE4_COMPLETE_CHECKLIST.md  cloud-values.yaml  ingress.yaml  phase4-deployment.yaml  verification-commands.md
mcp-server/: Dockerfile  mcp_server.py
specs/: agent_spec.md  mcp_spec.md  overview.md
specs_phase_IV/: README.md  backend_spec.md  frontend_spec.md  helm_spec.md  kagent_spec.md  kubectl_ai_spec.md
(+153 files in other folders)
